[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
]
name = "pulumi_flexinfra"
version = "0.0.1"
authors = [
  { name="Daniel Podwysocki" },
]
description = "Abstractions to manage multiple cloud providers in a uniform way."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
homepage = "https://github.com/danielpodwysocki/pulumi_flexinfra"
repository = "https://github.com/danielpodwysocki/pulumi_flexinfra"

